update how words are genned

--- a/makemore.ipynb
+++ b/makemore.ipynb
@@ -6890,7 +6890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -7899,7 +7899,7 @@
        " ...}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9017,33 +9017,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fianne\n",
-      "fxxelisson\n",
-      "fzoretaj\n",
-      "fianna\n",
-      "fyse\n",
-      "qqqeylond\n",
-      "fxila\n",
-      "fylenogjton\n",
-      "qqqeysie\n",
-      "ydane\n",
-      "qqqewy\n",
-      "fza\n",
-      "fyfancie\n",
-      "fynn\n",
-      "fxansh\n",
-      "cdaiya\n",
-      "yden\n",
-      "qqqeerayce\n",
-      "fzyenae\n",
-      "fylia\n"
+      "den\n",
+      "deyceimya\n",
+      "deina\n",
+      "desrian\n",
+      "devianysan\n",
+      "denny\n",
+      "der\n",
+      "degettely\n",
+      "del\n",
+      "des\n",
+      "den\n",
+      "delannah\n",
+      "dexyegh\n",
+      "den\n",
+      "dely\n",
+      "dem\n",
+      "dema\n",
+      "dena\n",
+      "devi\n",
+      "dessimaliyah\n"
      ]
     }
    ],
@@ -9052,7 +9052,7 @@
     "for wi in range(words_to_gen):\n",
     "    li = 0\n",
     "    next_letter = ''\n",
-    "    genned_word = '...'\n",
+    "    genned_word = '.de'\n",
     "    while next_letter != '.' and len(genned_word) < 20:\n",
     "        prior_group = []\n",
     "        prior_group.append(stoi[genned_word[li]])\n",
@@ -9066,94 +9066,6 @@
     "        genned_word += next_letter\n",
     "        li += 1\n",
     "    print(genned_word.strip('.'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 310,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 0, 0]"
-      ]
-     },
-     "execution_count": 310,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[0] * 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 323,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ta'"
-      ]
-     },
-     "execution_count": 323,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "itos[20] + itos[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 326,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mot.\n",
-      "yriel.\n",
-      "im.\n",
-      "mia.\n",
-      "iah.\n",
-      "mandran.\n",
-      "h.\n",
-      "igula.\n",
-      "yvi.\n",
-      "yacoby.\n",
-      "dijeylah.\n",
-      "ylenn.\n",
-      "tlius.\n",
-      "chi.\n",
-      "ysolardaw.\n",
-      "v.\n",
-      "daydyn.\n",
-      "dyowecfanvan.\n",
-      "rvin.\n",
-      "irsh.\n"
-     ]
-    }
-   ],
-   "source": [
-    "for _ in range(20):\n",
-    "    \n",
-    "    out = []\n",
-    "    context = [0, 20, 1] # initialize\n",
-    "    while True:\n",
-    "      probs = F.softmax(model(torch.tensor([context])), dim=1)\n",
-    "      ix = torch.multinomial(probs, 1, replacement=True, generator=g).item()  \n",
-    "      context = context[1:] + [ix]\n",
-    "      out.append(ix)\n",
-    "      if ix == 0:\n",
-    "        break\n",
-    "    \n",
-    "    print(''.join(itos[i] for i in out))"
    ]
   }
  ],
